--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>🍺 Craft Beers</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="author" content="Federico Iglesias" />
+    <title>Crealogix Brew Crafters</title>
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
+    <noscript>
+      <strong
+        >We're sorry but <%= htmlWebpackPlugin.options.title
+        %> doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong
+      >
+    </noscript>
     <div id="app"></div>
   </body>
 </html>
