--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="Federico Iglesias" />
-    <title>Crealogix Brew Crafters</title>
+    <title>🍺Crealogix Brew Crafters</title>
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1.0"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;500;700;900&display=swap"
       rel="stylesheet"
     />
   </head>
